--- a/styling/product.css
+++ b/styling/product.css
@@ -17,41 +17,66 @@ text-align: center;
 justify-content: space-around;
 padding-top: 10px;
 font-size:xx-large;
+a
 }
 .parent2{
-    margin-top: 10%;
-      position: fix;
-    height: 500px;
-    background-size: cover;
-    background-position: center;
     display: flex;
-}
-.child1{
-    display:inline-block;
-    height: 500px; 
+    justify-content: space-around;
+    align-items: center;
+    gap:20px;
+    margin-top: 30px;
+
+
+  }
+  .child1{
+    text-align: center;
+    justify-content: space-around;
+    color: navy;
+   }
+   .child2{
+    text-align: center;
+    justify-content: space-around;
+    color: navy;
+   }
+
+   .child3{
+    text-align: center;
+    justify-content: space-around;
+    color: navy;
+   }
+
+
+
+
+
+
+.pro{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap:20px;
     text-decoration: underline;
-    color: cyan;
-    
-}
-.child2{
-      
-    display: inline-block;
-    height: 500px;
-    width: 400px;
-    text-align:center;
-    padding: 40px 0px 0px 0px;
-color: #3d0505;
-margin-left: 10%;
-}
-.child3{ 
-    display: inline-block;
-    height: 500px;
-    width: 400px;
-    text-align:center;
-    padding: 40px 0px 0px 0px;
-    margin-left: 125px;
-    color: aliceblue;
-}
+    margin-left: 100px;
+
+
+  }
+  .Ring{
+    text-align: center;
+    justify-content: space-around;
+    color: navy;
+   }
+   .Necklesses{
+    text-align: center;
+    justify-content: space-around;
+    color: navy;
+   }
+
+   .SunGlasses{
+    text-align: center;
+    justify-content: space-around;
+    color: navy;
+   }
+
 
 
 
